--- a/exercise2/package.json
+++ b/exercise2/package.json
@@ -7,7 +7,8 @@
     "bootstrap": "^3.3.7"
   },
   "devDependencies": {
-    "less": "^2.7.2"
+    "less": "^2.7.2",
+    "less-plugin-autoprefix": "^1.5.1"
   },
   "scripts": {
     "build-all": "./bin/build-all",
