--- a/exercise3/package.json
+++ b/exercise3/package.json
@@ -1,6 +1,7 @@
 {
   "name": "exercise3",
-  "version": "0.1.0",
+  "version": "1.0.0",
+  "author": "Jonathan Jackson",
   "private": true,
   "dependencies": {
     "axios": "^0.16.2",
@@ -23,3 +24,4 @@
     "react-test-renderer": "^15.6.1"
   }
 }
+
